[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Peacasso" 
authors = [
  { name="Victor Dibia", email="victor.dibia@gmail.com" },
]
description = "UI tool to help you generate art (and experiment) with multimodal (text, image) AI models (stable diffusion)"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "transformers", 
    "scipy",
    "ftfy",
    "diffusers==0.6.0",
    "torch",
    "pydantic",
    "uvicorn",
    "typer",
    "fastapi", 
    "websockets",
]
dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "peacasso.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["peacasso*"]  
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"peacasso" = ["*.*"]

[project.urls]
"Homepage" = "https://github.com/victordibia/peacasso"
"Bug Tracker" = "https://github.com/victordibia/peacasso/issues"

[project.scripts]
peacasso = "peacasso.cli:run"